--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "hbs-utils": "0.0.4",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
+    "multer": "^1.3.1",
     "mysql": "^2.15.0",
     "mysql2": "^1.5.3",
     "nodemailer": "^4.6.7",
